--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,15 @@
+@import url("https://rsms.me/inter/inter.css");
+
 body {
-    font-family: Arial, sans-serif;
+    /* inter with system fallback stack */
+    font-family: InterVariable, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-feature-settings: "cv08", "cv05"; /* enable disambiguation of I and l */
 }
+
+h1, h2, h3 {
+    font-variation-settings: "opsz" 32; /* large optical size */
+}
+
 svg {
     width: 100%;
     height: 900px;
