--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 @import url("https://rsms.me/inter/inter.css");
 
-body {
+body, svg text {
     /* inter with system fallback stack */
     font-family: InterVariable, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-feature-settings: "cv08", "cv05"; /* enable disambiguation of I and l */
