--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,6 +37,12 @@ svg {
     border: 1px solid #ddd;
 }
 
+#packing, svg {
+    width: 100%;
+    height: 1400px;
+    border: 1px solid #ddd;
+}
+
 
 /*bubble chart stuff*/
 circle {
