--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,3 +54,72 @@ circle:hover
 {
     stroke: black;
 }
+
+/* set general padding and margin for body*/
+body {
+    margin: 0;
+    padding: 20px;
+}
+
+/* set grid template for dashboard */
+.dashboard-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+/* chart container class */
+.chart-container {
+    border: 1px solid #eee;
+    padding: 15px;
+    border-radius: 8px;
+    background: white;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+
+/* chart conainter heading */
+.chart-container h2 {
+    margin-top: 0;
+    font-size: 1.2em;
+}
+
+/* info box styling*/
+#info-box {
+    position: fixed;
+    left: 20px;
+    bottom: 20px;
+    width: 500px;
+    max-height: 50vh;
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 15px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    display: none;
+    overflow-y: auto;
+    z-index: 100;
+}
+
+#close-box {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    padding: 2px 8px;
+    cursor: pointer;
+}
+
+/* tooltip styling*/
+#tooltip {
+    position: absolute;
+    pointer-events: none;
+    background: white;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    display: none;
+    z-index: 10;
+}
