got bubble chart and region map interaction working, need to add it so it removes highlights when clicking off

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -123,3 +123,16 @@ body {
     display: none;
     z-index: 10;
 }
+
+/*bubble highlighting stuff*/
+circle {
+    opacity: 0.7;
+    stroke: none;
+    transition: opacity 0.2s ease, stroke-width 0.2s ease;
+}
+
+circle.highlighted-bubble {
+    opacity: 0;
+    stroke: rgb(255, 74, 240);
+    stroke-width: 5px;
+}
