--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,16 +33,9 @@ h1, h2, h3 {
 
 svg {
     width: 100%;
-    height: 900px;
+    height: auto;
     border: 1px solid #ddd;
 }
-
-#packing, svg {
-    width: 100%;
-    height: 1400px;
-    border: 1px solid #ddd;
-}
-
 
 /*bubble chart stuff*/
 circle {
