bubble chart legend 2.0

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,24 +38,24 @@ svg {
 }
 
 /*bubble chart stuff*/
-circle {
+.bubbles circle {
     stroke-width: 2px;
     stroke: white;
 }
 
-circle:hover
+.bubbles circle:hover
 {
     stroke: black;
 }
 
 /*bubble highlighting stuff*/
-circle {
+.bubbles circle {
     opacity: 0.7;
     stroke: none;
     transition: opacity 0.2s ease, stroke-width 0.2s ease;
 }
 
-circle.highlighted-bubble {
+.bubbles circle.highlighted-bubble {
     opacity: 0;
     stroke: rgb(255, 74, 240);
     stroke-width: 5px;
