--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,6 +75,12 @@ body {
     margin-bottom: 20px;
 }
 
+/* first item full width */
+.dashboard-grid > .chart-container:first-child {
+    grid-column: 1 / -1;
+}
+
+
 /* chart container class */
 .chart-container {
     border: 1px solid #eee;
@@ -168,4 +174,3 @@ circle {
     font-size: 11px;
     fill: #333;
   }
-
