--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,6 +35,7 @@ svg {
     width: 100%;
     height: auto;
     border: 1px solid #ddd;
+    max-height: 1000px;
 }
 
 #circularPackingTitle {
@@ -104,6 +105,7 @@ body {
     border-radius: 8px;
     background: white;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    max-height: 1500px;
 }
 
 /* chart conainter heading */
